--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,6 +8,7 @@ parts:
   syndom:
     source: https://gitlab.com/gabmus/syndication-domination.git
     source-commit: "75920321062d682437f3fb0319dad227d8b18f6c"
+    plugin: meson
     meson-parameters:
       - --prefix=/usr
       - -DTO_JSON_BINARY=false
