--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -14,6 +14,11 @@ parts:
       - -DTO_JSON_BINARY=false
       - -DPYTHON_BINDINGS=true
       - -DHTML_SUPPORT=true
+    build-environment:
+      - PYTHONPATH: $CRAFT_PART_INSTALL/usr/lib/python3.10/dist-packages:$PYTHONPATH
+    override-pull: |
+      crafctl default
+      pip install --prefix=$CRAFT_PART_INSTALL/usr pybind11==2.10.3
     build-packages:
       - libpugixml-dev
       - pybind11-dev
