fixed python interpreter path

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -60,7 +60,7 @@ parts:
       - -share
     organize:
       bin: usr/bin
-      lib/python3.10/site-packages: usr/lib/python3.10/dist-packages
+      lib/python3.10/site-packages: usr/lib/python3/dist-packages
   syndom:
     after: [ Pillow ]
     source: https://gitlab.com/gabmus/syndication-domination.git
@@ -93,7 +93,6 @@ parts:
       - PATH: /snap/webkitgtk-6-gnome-2204-sdk/current/usr/bin:$PATH
       - XDG_DATA_DIRS: /snap/webkitgtk-6-gnome-2204-sdk/current/usr/share:$XDG_DATA_DIRS
       - LD_LIBRARY_PATH: /snap/webkitgtk-6-gnome-2204-sdk/current/usr/lib:/snap/webkitgtk-6-gnome-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET:/snap/webkitgtk-6-gnome-2204-sdk/current/usr/lib/webkitgtk-6.0:/snap/webkitgtk-6-gnome-2204-sdk/current/usr/lib/$CRAFT_ARCH_TRIPLET/girepository-1.0:$LD_LIBRARY_PATH
-      - PYTHONPATH: $CRAFT_PART_INSTALL/usr/local/lib/python3.10/dist-packages:$PYTHONPATH
     override-pull: |
       craftctl default
       patch -p1 < $CRAFT_PROJECT_DIR/snap/gfeeds.patch
@@ -104,6 +103,7 @@ parts:
       for i in `find $CRAFT_PART_INSTALL/meta/gui/icons -name "*.svg" -o -name "*.png"`; do
         mv $i "`dirname $i`/snap.$CRAFT_PROJECT_NAME.`basename $i`"
       done
+      sed -e '1c#!/usr/bin/env python3' -i "${CRAFT_PART_INSTALL}/snap/gfeeds/current/usr/bin/gfeeds
     build-packages:
       - blueprint-compiler
     build-snaps:
@@ -135,4 +135,5 @@ apps:
     extensions: [gnome]
     common-id: org.gabmus.gfeeds
     environment:
+      PYTHONPATH: $SNAP/usr/lib/python3/dist-packages:$PYTHONPATH
       LD_LIBRARY_PATH: $SNAP/webkitgtk-platform/usr/lib/$SNAPCRAFT_ARCH_TRIPLET:$SNAP/webkitgtk-platform/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/webkitgtk-6.0:$LD_LIBRARY_PATH
