--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -34,7 +34,7 @@ parts:
       - Pygments==2.14.0
       - pytest==7.2.2
       - python-dateutil==2.8.2
-      - python_magic==0.4.27
+      - python-magic==0.4.27
       - pytz==2022.7.1
       - readability_lxml==0.8.1
       - requests==2.28.2
