snap: add platforms supported
Signed-off-by: Soumyadeep Ghosh <soumyadeepghosh2004@zohomail.in>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,6 +9,11 @@ layout:
   /usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/webkitgtk-6.0:
     bind: $SNAP/webkitgtk-platform/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/webkitgtk-6.0
 
+platforms:
+  amd64:
+  arm64:
+  armhf:
+
 parts:
   python-deps:
     source: .
